--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "dotenv": "^8.6.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
     "express": "^4.17.1",
     "fusioncharts": "^3.17.0",
     "markdown": "^0.5.0",
     "moment": "^2.29.1",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fusioncharts": "^3.1.2",
